[gd_scene load_steps=3 format=3 uid="uid://w87ls4e8oasj"]

[ext_resource type="Script" path="res://scenes/game/combat_log.gd" id="1_xmj2v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ipmd"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.580392)

[node name="CombatLog" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmj2v")

[node name="CloseOuterClick" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ipmd")

[node name="OuterMargin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VerticalLayout" type="VBoxContainer" parent="PanelContainer/OuterMargin"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/OuterMargin/VerticalLayout"]
layout_mode = 2
text = "CLOSE LOG"

[node name="LogText" type="RichTextLabel" parent="PanelContainer/OuterMargin/VerticalLayout"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "SUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then thisSUPER LONG
HERE's the thing
fkashldflkahsf
1444444444
this happened then this"
scroll_following = true
selection_enabled = true

[node name="CopyButton" type="Button" parent="PanelContainer/OuterMargin/VerticalLayout"]
layout_mode = 2
text = "Copy to Clipboard"

[connection signal="pressed" from="CloseOuterClick" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/OuterMargin/VerticalLayout/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/OuterMargin/VerticalLayout/CopyButton" to="." method="_on_copy_button_pressed"]
